@@ -82,14 +82,20 @@ class ModulesHelper
 		jimport('joomla.filesystem.folder');
 
 		$db		= JFactory::getDbo();
-		$query	= $db->getQuery(true);
 
-		$query->select('DISTINCT(position)');
-		$query->from('#__modules');
-		$query->where('`client_id` = '.(int) $clientId);
-		$query->order('position');
+		if ($clientId == '*') {
+			$where = '';
+		} else {
+			$where = ' WHERE client_id = '.(int) $clientId;
+		}
 
-		$db->setQuery($query);
+		$db->setQuery(
+			'SELECT DISTINCT(position)' .
+			' FROM #__modules' .
+			$where .
+			' ORDER BY position'
+		);
+
 		$positions = $db->loadResultArray();
 		$positions = (is_array($positions)) ? $positions : array();
 
@@ -118,10 +124,16 @@ class ModulesHelper
 		$db		= JFactory::getDbo();
 		$query	= $db->getQuery(true);
 
+		if ($clientId == '*') {
+			$where = '';
+		} else {
+			$where = 'm.`client_id` = '.(int)$clientId;
+		}
+
 		$query->select('DISTINCT(m.module) AS value, e.name AS text');
 		$query->from('#__modules AS m');
 		$query->join('LEFT', '#__extensions AS e ON e.element=m.module');
-		$query->where('m.`client_id` = '.(int)$clientId);
+		$query->where($where);
 
 		$db->setQuery($query);
 		$modules = $db->loadObjectList();
