@@ -33,9 +33,10 @@ $saveOrder	= $listOrder == 'ordering';
 		</div>
 		<div class="filter-select">
 			<label class="selectlabel" for="filter_client_id">
-				<?php echo JText::_('COM_MODULES_OPTION_SELECT_CLIENT'); ?>
+				<?php echo JText::_('JGLOBAL_FILTER_CLIENT'); ?>
 			</label>
 			<select name="filter_client_id" id="filter_client_id" class="inputbox">
+				<option value=""><?php echo JText::_('JGLOBAL_FILTER_CLIENT');?></option>
 				<?php echo JHtml::_('select.options', ModulesHelper::getClientOptions(), 'value', 'text', $this->state->get('filter.client_id'));?>
 			</select>
             
@@ -94,7 +95,10 @@ $saveOrder	= $listOrder == 'ordering';
 				<th class="title">
 					<?php echo JHtml::_('grid.sort', 'JGLOBAL_TITLE', 'title', $listDirn, $listOrder); ?>
 				</th>
-				<th class="width-20">
+				<th class="width-5">
+					<?php echo JHtml::_('grid.sort',  'JCLIENT', 'client_id', $listDirn, $listOrder); ?>
+				</th>
+				<th class="width-15">
 					<?php echo JHtml::_('grid.sort',  'COM_MODULES_HEADING_POSITION', 'position', $listDirn, $listOrder); ?>
 				</th>
 				<th class="width-10">
@@ -150,6 +154,9 @@ $saveOrder	= $listOrder == 'ordering';
 					<p class="smallsub">
 						<?php echo JText::sprintf('JGLOBAL_LIST_NOTE', $this->escape($item->note));?></p>
 					<?php endif; ?>
+				</td>
+				<td class="center">
+					<?php echo $item->client_id == 0 ? JText::_('JSITE') : JText::_('JADMINISTRATOR'); ?>
 				</td>
 				<td class="center">
 					<?php echo $item->position; ?>
